--- a/JSProject/.settings/com.palantir.typescript.prefs
+++ b/JSProject/.settings/com.palantir.typescript.prefs
@@ -2,15 +2,15 @@ build.path.exportedFolder=dist
 build.path.sourceFolder=src
 compiler.codeGenTarget=ECMASCRIPT5
 compiler.compileOnSave=true
-compiler.generateDeclarationFiles=false
+compiler.generateDeclarationFiles=true
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
 compiler.noEmitOnError=true
-compiler.noImplicitAny=true
+compiler.noImplicitAny=false
 compiler.noLib=false
-compiler.outputDirOption=js
-compiler.outputFileOption=
+compiler.outputDirOption=dist
+compiler.outputFileOption=JSProject.js
 compiler.removeComments=false
 compiler.suppressImplicitAnyIndexErrors=false
 eclipse.preferences.version=1
