--- a/JSProjectTests/.settings/com.palantir.typescript.prefs
+++ b/JSProjectTests/.settings/com.palantir.typescript.prefs
@@ -6,7 +6,7 @@ compiler.generateDeclarationFiles=false
 compiler.inlineSourceMap=false
 compiler.inlineSources=false
 compiler.jsx=NONE
-compiler.mapSourceFiles=true
+compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
 compiler.noImplicitAny=false
 compiler.noLib=false
