--- a/JSProjectECMA6/.project
+++ b/JSProjectECMA6/.project
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JSProjectTests</name>
+	<name>JSProjectECMA6</name>
 	<comment></comment>
 	<projects>
-		<project>JSProject</project>
-		<project>JSProjectECMA6</project>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 		<buildCommand>
 			<name>com.palantir.typescript.typeScriptBuilder</name>
 			<arguments>
@@ -14,6 +17,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.palantir.typescript.typeScriptNature</nature>
 	</natures>
 	<linkedResources>
@@ -21,6 +25,11 @@
 			<name>std-lib</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>std-lib/lib.d.ts</name>
+			<type>1</type>
+			<location>C:/twerno/eclipse/eclipse/plugins/com.axmor.eclipse.typescript.core_4.0.0.201508061529/lib/typescript-bridge/ts/lib.d.ts</location>
 		</link>
 	</linkedResources>
 </projectDescription>
