--- a/JSProjectTests/JSProjectTests.csproj
+++ b/JSProjectTests/JSProjectTests.csproj
@@ -23,6 +23,8 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\Main.ts" />
+    <TypeScriptCompile Include="src\rpc\RpcTests.ts" />
+    <TypeScriptCompile Include="src\rpc\TestObjectFactory.ts" />
     <TypeScriptCompile Include="src\smartObject\SmartObjectBasicTests.ts" />
     <TypeScriptCompile Include="src\smartObject\TestObjectFactory.ts" />
     <TypeScriptCompile Include="src\tsUnit.ts" />
@@ -61,7 +63,7 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptRemoveComments>True</TypeScriptRemoveComments>
     <TypeScriptSourceMap>False</TypeScriptSourceMap>
-    <TypeScriptTarget>ES5</TypeScriptTarget>
+    <TypeScriptTarget>ES6</TypeScriptTarget>
     <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
     <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
     <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
