--- a/JSProjectECMA6/.settings/com.palantir.typescript.prefs
+++ b/JSProjectECMA6/.settings/com.palantir.typescript.prefs
@@ -9,7 +9,7 @@ compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
 compiler.noEmitOnError=true
-compiler.noImplicitAny=false
+compiler.noImplicitAny=true
 compiler.noLib=false
 compiler.outputDirOption=dist
 compiler.outputFileOption=jsProject6.js
