--- a/JSProjectTests/.settings/com.palantir.typescript.prefs
+++ b/JSProjectTests/.settings/com.palantir.typescript.prefs
@@ -1,6 +1,6 @@
 build.path.exportedFolder=
 build.path.sourceFolder=
-compiler.codeGenTarget=ECMASCRIPT5
+compiler.codeGenTarget=ECMASCRIPT6
 compiler.compileOnSave=true
 compiler.generateDeclarationFiles=false
 compiler.inlineSourceMap=false
@@ -8,7 +8,7 @@ compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
-compiler.noImplicitAny=false
+compiler.noImplicitAny=true
 compiler.noLib=false
 compiler.outputDirOption=js
 compiler.outputFileOption=
