ECMA6 TestFramework WIP

--- a/JSProjectECMA6/.settings/com.palantir.typescript.prefs
+++ b/JSProjectECMA6/.settings/com.palantir.typescript.prefs
@@ -7,13 +7,13 @@ compiler.inlineSourceMap=false
 compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
-compiler.moduleGenTarget=NONE
+compiler.moduleGenTarget=ES6
 compiler.noEmitOnError=true
 compiler.noImplicitAny=true
 compiler.noLib=false
 compiler.outputDirOption=dist
 compiler.outputFileOption=jsProject6.js
-compiler.removeComments=false
+compiler.removeComments=true
 compiler.suppressExcessPropertyErrors=false
 compiler.suppressImplicitAnyIndexErrors=false
 eclipse.preferences.version=1
