--- a/HsLogic/.settings/com.palantir.typescript.prefs
+++ b/HsLogic/.settings/com.palantir.typescript.prefs
@@ -8,7 +8,9 @@ compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
+compiler.noFallthroughCasesInSwitch=true
 compiler.noImplicitAny=true
+compiler.noImplicitReturns=true
 compiler.noLib=false
 compiler.outputDirOption=dist
 compiler.outputFileOption=HsLogic.js
