--- a/HsLogic/.settings/com.palantir.typescript.prefs
+++ b/HsLogic/.settings/com.palantir.typescript.prefs
@@ -14,7 +14,7 @@ compiler.noImplicitReturns=true
 compiler.noLib=false
 compiler.outputDirOption=dist
 compiler.outputFileOption=HsLogic.js
-compiler.removeComments=true
+compiler.removeComments=false
 compiler.suppressExcessPropertyErrors=false
 compiler.suppressImplicitAnyIndexErrors=false
 eclipse.preferences.version=1
